gcc/testsuite/rust/rustc/ui/issues/issue-1476.rs
fn main() {
    println!("{}", x); // { dg-error ".E0425." "" { target *-*-* } }
}

